--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <button type="button" disabled class="btn-submit">Submit</button>
             </div>
         </section>
-
         <section id="thank-you-card" class="hidden">
             <div class="card | center padding-thank-you">
                 <img class="img-thank-you" src="./images/illustration-thank-you.svg" alt="">
@@ -45,21 +44,39 @@
                     support, don’t hesitate to get in touch!</p>
             </div>
         </section>
-
     </main>
-
-    <footer>
-        <p class="challenge-by">Challenge by
-            <a href="https://www.frontendmentor.io?ref=challenge" rel="noopener" target="_blank">Frontend Mentor</a>
-        </p>
-
-        <p>
-            Coded by <a href="https://github.com/bboy77">bboy77</a>.
-        </p>
+    <footer class="footer-frontend-mentor">
+        <div class="challenge-by">
+            <p>Challenge by</p>
+            <a href="https://www.frontendmentor.io?ref=challenge">
+                <svg title="Frontend Mentor">
+                    <use xlink:href="images/frontend-mentor-logo.svg#frontend-mentor-logo"></use>
+                </svg>
+            </a>
+        </div>
+        <div class="coded-by">
+            <p>Coded by</p>
+            <a href="https://github.com/bboy77">bboy77</a>
+        </div>
+        <div class="social-media">
+            <a href="https://github.com/bboy77">
+                <svg title="GitHub">
+                    <use xlink:href="images/icons.svg#icon-github" />
+                </svg>
+            </a>
+            <a href="https://www.linkedin.com/in/andy-bish-61a1ab70/">
+                <svg title="LinkedIn">
+                    <use xlink:href="images/icons.svg#icon-linkedin" />
+                </svg>
+            </a>
+            <a href="https://www.nuget.org/packages/AebSolutions.CodeConvention.SolutionTemplates">
+                <svg title="NuGet">
+                    <use xlink:href="images/icons.svg#icon-nuget"></use>
+                </svg>
+            </a>
+        </div>
     </footer>
-
     <script src="./js/index.js"></script>
-
 </body>
 
 </html>
