--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="challenge-by">
             <p>Challenge by</p>
             <a href="https://www.frontendmentor.io?ref=challenge">
-                <svg title="Frontend Mentor">
+                <svg>
                     <use xlink:href="images/frontend-mentor-logo.svg#frontend-mentor-logo"></use>
                 </svg>
             </a>
@@ -60,17 +60,17 @@
         </div>
         <div class="social-media">
             <a href="https://github.com/bboy77">
-                <svg title="GitHub">
+                <svg>
                     <use xlink:href="images/icons.svg#icon-github" />
                 </svg>
             </a>
             <a href="https://www.linkedin.com/in/andy-bish-61a1ab70/">
-                <svg title="LinkedIn">
+                <svg>
                     <use xlink:href="images/icons.svg#icon-linkedin" />
                 </svg>
             </a>
             <a href="https://www.nuget.org/packages/AebSolutions.CodeConvention.SolutionTemplates">
-                <svg title="NuGet">
+                <svg>
                     <use xlink:href="images/icons.svg#icon-nuget"></use>
                 </svg>
             </a>
