--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <footer class="footer-frontend-mentor">
         <div class="challenge-by">
             <p>Challenge by</p>
-            <a href="https://www.frontendmentor.io?ref=challenge">
+            <a href="https://www.frontendmentor.io?ref=challenge" aria-label="Frontend Mentor Logo">
                 <svg>
                     <use xlink:href="images/frontend-mentor-logo.svg#frontend-mentor-logo"></use>
                 </svg>
@@ -59,17 +59,17 @@
             <a href="https://github.com/bboy77">bboy77</a>
         </div>
         <div class="social-media">
-            <a href="https://github.com/bboy77">
+            <a href="https://github.com/bboy77" aria-label="GitHub">
                 <svg>
                     <use xlink:href="images/icons.svg#icon-github" />
                 </svg>
             </a>
-            <a href="https://www.linkedin.com/in/andy-bish-61a1ab70/">
+            <a href="https://www.linkedin.com/in/andy-bish-61a1ab70/" aria-label="LinkedIn">
                 <svg>
                     <use xlink:href="images/icons.svg#icon-linkedin" />
                 </svg>
             </a>
-            <a href="https://www.nuget.org/packages/AebSolutions.CodeConvention.SolutionTemplates">
+            <a href="https://www.nuget.org/packages/AebSolutions.CodeConvention.SolutionTemplates" aria-label="NuGet">
                 <svg>
                     <use xlink:href="images/icons.svg#icon-nuget"></use>
                 </svg>
